# LibMVC

./: .codecov.yml  .codedocs  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  boost_graph.hpp  build.cov.sh  build.sh  fastvc.hpp  indexed_heap.hpp  main.cpp  meson.build  numvc.cpp  numvc.hpp  tsewf.h  tsewf.hpp
.circleci/: config.yml
.github/workflows/: main.yml
CMakeExt/: GoogleBenchmark.cmake
LibFastVC/: CMakeLists.txt  Makefile  fastvc.hpp  main.cpp  meson.build
LibMVC/: parallelsolveradapter.hpp
LibNuMVC/: CMakeLists.txt  Makefile  indexed_heap.hpp  main.cpp  main_parallel.cpp  meson.build  numvc.hpp
ParallelMetaSolver/: Makefile  main.cpp
ParallelSolverAdapter/: CMakeLists.txt  Makefile  ParallelSolverAdapter.hpp  main.cpp  meson.build
bench/: CMakeLists.txt  fetch_graphs.sh  main.cpp  meson.build
bench/data/: frb45-21-1.mis
doc/: Doxyfile.in  FastVC.md  meson.build
standalone/: Makefile  main.cpp  meson.build
subprojects/: benchmark.wrap
test/: .StaticInterfaceTests.cpp.swp  CMakeLists.txt  InterfaceTests.cpp  SolverTests.cpp  main.cpp  meson.build
